# boltz-belka-demo-neurips-2024

./: .gitignore  LICENSE  README.md  experiment.ipynb  inference_runner.py  pyproject.toml
belka-data/: belka_sample.parquet
msa/: HSA.csv
